Updated README with compile/run instructions