@@ -1,2 +1,11 @@
 # jomplx
 Write once, run anywhere implementation of the Complx LC-3 emulator for CS 2110 at Georgia Tech.
+
+##To compile jomplx:
+`javac --module-path $PATH_TO_FX --add-modules=javafx.controls Jomplx.java`
+You'll need to replace $PATH_TO_FX with your openjfx folder. [You can get openjfx here](https://gluonhq.com/products/javafx/).
+
+
+##To run:
+`java --module-path $PATH_TO_FX --add-modules=javafx.controls Jomplx`
+Again, you'll need to replace $PATH_TO_FX.
